--- a/src/css/artists.css
+++ b/src/css/artists.css
@@ -97,7 +97,6 @@ a:focus {
 .marquee__inner {
     display: flex;
     position: relative;
-    transform: translate3d(var(--move-initial), 0, 0);
     animation: marquee 20s linear infinite;
 }
 
@@ -416,6 +415,9 @@ a:focus {
 	@media  screen and (max-width: 768px) {
 		.cursor__text {
 			font-size: 24px;
+		}
+		.marquee__inner {
+			animation: marquee 10s linear infinite;
 		}
 	}
 	@media  screen and (max-width: 375px) {
